# brick-llm

./: .env.example  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CITATION.cff  Dockerfile  Makefile  README.md  docker-compose.yml  index.html  langgraph.json  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml  tox.ini
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci-cd.yml  gh-pages.yml
brickllm/: __init__.py  agent.py  compiled_graphs.py  configs.py  requirements.txt  schemas.py  states.py
brickllm/edges/: __init__.py  check_sensor_presence.py  validate_condition.py  validate_condition_local.py
brickllm/graphs/: __init__.py  abstract_graph.py  brickschema_graph.py  brickschema_graph_local.py
brickllm/helpers/: __init__.py  brick_hierarchy.json  get_hierarchy_info.py  llm_models.py  prompts.py  query_brickschema.py
brickllm/nodes/: __init__.py  generation_local.py  get_elem_children.py  get_elements.py  get_relationships.py  get_sensors.py  model_refactoring.py  schema_to_ttl.py  validate_schema.py
brickllm/ontologies/: Brick.ttl  brick_hierarchy.json
containers/: docker-compose.yml
cookbook/: brickllm_openai.ipynb
docs/: index.md  installation.md  overview.md
examples/: brickschema_ttl.py  example_anthropic.py  example_custom_llm.py  example_finetuned_local.py  example_openai.py  example_ttl_to_description.py  my_building.ttl
finetuned/: Dockerfile  entrypoint.sh
installation/: index.html
overview/: index.html
search/: search_index.json
tests/: prova_test.py
usage/: index.html
(+62 files in other folders)
