[tool.poetry]
name = "brickllm"
version = "0.0.1"
description = "Library for generating RDF files following BrickSchema ontology using LLM"
authors = ["Marco Perini <marco.perini@eurac.edu>", "Daniele Antonucci <daniele.antonucci@eurac.edu>"]
license = "MIT"
readme = "README.md"
homepage = "https://brickllm.com/"
repository = "https://github.com/EURAC-EEBgroup/brickllm-lib"
documentation = "https://brickllm.com/docs"
keywords = [
    "brickllm",
    "brickschema",
    "rdf",
    "ontologies",
    "knowledge graph",
    "semantic web",
    "ai",
    "artificial intelligence",
    "gpt",
    "machine learning",
    "natural language processing",
    "nlp",
    "openai",
    "building automation",
    "iot",
    "graph",
    "ontology",
]

classifiers = [
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

packages = [{include = "brickllm"}]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
langgraph = "0.2.23"
langchain_openai = "0.2.0"
langchain-fireworks = "0.2.0"
langchain-anthropic = "0.2.1"
langchain_community = "0.3.0"
langchain_core = "0.3.5"
rdflib = ">=6.2.0,<7"
pyshacl = "0.21"

[tool.poetry.dev-dependencies]
pytest = "8.0.0"
pytest-mock = "3.14.0"
pylint = "^3.2.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
